keycloak/deployment/k8s/base/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: keycloak
spec:
  selector:
    matchLabels:
      app: keycloak
  serviceName: keycloak
  replicas: 1
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: 'quay.io/keycloak/keycloak:latest'
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
          - name: jgroups
            containerPort: 7600
            protocol: TCP
        imagePullPolicy: IfNotPresent
        args:
          - start-dev
          - '--cache=ispn'
          - '--cache-stack=kubernetes'
          - '-Djgroups.dns.query=keycloak.$(POD_NAMESPACE).svc.cluster.local'
