keycloak/deployment/k8s/base/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: keycloak
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
